
Change Log

2018-08-01
	Fix: -u command line option caused an infinite loop. (s9.c)
	So nobody ever uses this option? :)
2018-07-22
	INEXACT->EXACT now returns an integer even if its argument has
	fractional digits, e.g. (inexact->exact 1.5) ==> 2. (s9.c)
2018-07-21
	Strings returned by SYMBOL->STRING are now immutable, as specified
	in R4RS, section 3.5. (s9.c)
	Upgraded S9core to Mk IIId. (s9core.*)
	Added s9_real_round() function. (s9core.*)
	Made ROUND a primitive function. (s9.c)
2018-06-05
	Fix: LOADing a file with any missing closing parentheses did not
	cause an error. (Removed some left-over code from reader.)
2017-11-09
	Merged Plan 9 patches by McKay Marston. Thanks!
	Upgrade to S9core Mk IIIc. (s9core.*)
	Changed S9core documentation format from PDF to ASCII. (s9core.txt)
2017-01-25
	Made CSV:READ translate subsequent commas as empty fields, e.g.:
	(csv:read)"",,"" ==> ("" "" ""). (ext/csv)
	Added CSV:READ and CSV:WRITE help pages. (help/csv/)
2017-01-24
	Added CSV (comma-separated values) extension containing CSV:READ
	and CSV:WRITE primitives. (ext/csv/)
2016-12-06
	Fix: S9SOS mis-computed the precedence order for multi-methods.
	Patch supplied by David Person, thank you!
2016-11-30
	Upgrade to S9core Mk III. (s9core.*)
	s9_make_integer() will now return pre-allocated objects for some
	common values (0, 1, 2, 10). (Thanks, David Person!)
	Added type_tag() accessor.
2016-08-23
	The LENGTH fix of 2014-12-06 got reverted somewhere along the way.
	Re-fixed. (s9.c)
2016-08-05
	Upgrade to S9core Mk II. (s9.c, s9*.h)
	Added -e (eval) and -r (run) command line arguments. (s9.c)
2015-11-19
	real_ceil(), real_floor(), real_trunc() could fail when being
	passed an integer. Thanks, Alexander Shendi! (s9core.c)
2015-11-17
	Added real_power() function to s9core, added EXPT primitive
	(unused, though; the Scheme version is faster). (s9core.[ch])
2015-11-08
	S9core: added the open_input_string(), close_input_string(),
	and port_eof() functions. (s9core.[ch])