@@ -1,8 +1,8 @@
 3386 1 ./TODO
-19619 94 ./s9.c
+59529 94 ./s9.c
 20304 1 ./ABOUT
-18959 35 ./s9.scm
-20933 15 ./s9core.h
+160 35 ./s9.scm
+42289 15 ./s9core.h
 10174 19 ./s9.1.txt
 40404 2 ./LICENSE
 41089 38 ./contrib/format.scm
@@ -619,15 +619,15 @@
 48144 1 ./util/s9.rc
 41741 13 ./util/fix-help-files
 9613 8 ./README
-29779 8 ./Makefile
+30921 8 ./Makefile
 48690 1 ./config.scm
 43017 1 ./configure
 49810 2 ./mkfile
 11686 16 ./s9.1
-37273 67 ./s9core.c
-56772 81 ./CHANGES
-1999 71 ./s9core.txt
-45074 9 ./s9import.h
+30354 68 ./s9core.c
+60216 82 ./CHANGES
+4210 73 ./s9core.txt
+63816 9 ./s9import.h
 23969 9 ./MASCOT.png
 22085 2 ./README.s9core
 55250 1 ./s9ext.h
